plugins {
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

ext {
    serviceName = 'beribturing'
    serviceVersion = '1.0-SNAPSHOT'
    lombokVersion = '1.18.32'
    springVersion = '6.2.3'
    springBootVersion = '3.5.0'
    queryDslVersion = "5.0.0:jakarta"
    minioVersion = '8.5.17'
}

allprojects {
    group 'ing.beribtur'
    version serviceVersion
    configurations.all {
        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'groovy'
    apply plugin: 'java-library'
    apply plugin: 'signing'
    apply plugin: 'io.spring.dependency-management'

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
        }
    }

    dependencies {
        compileOnly("org.projectlombok:lombok:${lombokVersion}")
        annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
        testImplementation("org.projectlombok:lombok:${lombokVersion}")
        testAnnotationProcessor("org.projectlombok:lombok:${lombokVersion}")
    }

    test {
        useJUnitPlatform()
    }
}

task printServiceName() {
    doLast {
        println "serviceName: ${serviceName}"
    }
}